// -*- mode: text; -*-

This file is referred by some automatic release scripts.

[Release History (Japanese)]

<!-- BEGIN-LATEST-JP -->
<li>Polaris Engine 1.1.3 2024/4/23
  <ul>
    <li>カスタム1/2ボタンのgosub動作のバグを修正</li>
  </ul>
</li>
<!-- END-LATEST-JP -->
<li>Polaris Engine 1.1.2 2024/4/23
  <ul>
    <li>switchコマンドのバグ修正</li>
    <li>switchコマンドの非推奨化</li>
  </ul>
</li>
<li>Polaris Engine 1.1.1 2024/4/22
  <ul>
    <li>ORBISライブラリの修正</li>
  </ul>
</li>
<li>Polaris Engine 1.0.22 2024/4/21
  <ul>
    <li>内部的な修正</li>
  </ul>
</li>
<li>Polaris Engine 1.0.21 2024/4/21
  <ul>
    <li>Ubuntu版の修正</li>
  </ul>
</li>
<li>Polaris Engine 1.0.20 2024/4/21
  <ul>
    <li>署名を追加</li>
  </ul>
</li>
<li>Polaris Engine 1.0.19 2024/4/21
  <ul>
    <li>Cielシステムのバグ修正</li>
    <li>エディタ(エクスポート前の状態)で右上ボタンを常に表示するように変更 (チラつきによる違和感を抑制)</li>
  </ul>
</li>
<li>Polaris Engine 1.0.18 2024/4/20
  <ul>
    <li>自動リリースをあきらめて署名を復活</li>
  </ul>
</li>
<li>Polaris Engine 1.0.17 2024/4/16
  <ul>
    <li>英語コンフィグファイルの修正(TODO:英語化)</li>
  </ul>
</li>
<li>Polaris Engine 1.0.16 2024/4/16
  <ul>
    <li>Windowsで画面サイズが足りない場合に全画面で起動するように変更</li>
  </ul>
</li>
<li>Polaris Engine 1.0.14 2024/4/15
  <ul>
    <li>フォントファイルを修正</li>
  </ul>
</li>
<li>Polaris Engine 1.0.13 2024/4/15
  <ul>
    <li>コンフィグを修正</li>
  </ul>
</li>
<li>Polaris Engine 1.0.12 2024/4/14
  <ul>
    <li>日本語ノベルテンプレートのルビサイズを修正</li>
  </ul>
</li>
<li>Polaris Engine 1.0.11 2024/4/14
  <ul>
    <li>テンプレートのロゴを変更</li>
    <li>縦書きテンプレートにフォントライセンス画像を追加</li>
  </ul>
</li>
<li>Polaris Engine 1.0.10 2024/4/14
  <ul>
    <li>公式Visual Studio Code拡張の追加 (VScodeからPolaris Engine Extensionをインストール。既存ゲームでは新規テンプレ内の.vscodeフォルダをコピーで有効になります)</li>
  </ul>
</li>
<li>Polaris Engine 1.0.9 2024/4/14
  <ul>
    <li>コンフィグの改善</li>
  </ul>
</li>
<li>Polaris Engine 1.0.8 2024/4/14
  <ul>
    <li>Ubuntu PPA</li>
  </ul>
</li>
<li>Polaris Engine 1.0.6 2024/4/14
  <ul>
    <li>Mac版の公開</li>
  </ul>
</li>
<li>Polaris Engine 1.0.5 2024/4/14
  <ul>
    <li>変数名のコンフィグを修正</li>
  </ul>
</li>