@@ -252,6 +252,14 @@
 			<br>
 
 			<div style="text-align: center;">
+				<h3>カスタムシステムメニューのサンプル</h3>
+				<p>
+					カスタムシステムメニューのサンプルです。<br>
+					<a href="/dl/material/custom-sysmenu-sample.zip">ZIPダウンロード</a>
+				</p>
+			</div>
+
+			<div style="text-align: center;">
 				<img src="/img/screenshots/miryokuteki-click.png">
 				<br>
 				<h3>クリックアイコン</h3>
